WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193366
REGRESSION (PSON): Firefox app lacks Open in New Tab in menu
https://bugs.webkit.org/show_bug.cgi?id=193366
Summary
REGRESSION (PSON): Firefox app lacks Open in New Tab in menu
Tim Horton
Reported
2019-01-11 13:53:16 PST
REGRESSION (PSON): Firefox app lacks Open in New Tab in menu
Attachments
Patch
(9.05 KB, patch)
2019-01-11 13:54 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.08 KB, patch)
2019-01-11 14:02 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.05 KB, patch)
2019-01-11 14:11 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-01-11 13:54:04 PST
Created
attachment 358940
[details]
Patch
Tim Horton
Comment 2
2019-01-11 13:54:06 PST
<
rdar://problem/46097212
>
Simon Fraser (smfr)
Comment 3
2019-01-11 13:57:25 PST
Comment on
attachment 358940
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=358940&action=review
> Source/WTF/wtf/spi/darwin/dyldSPI.h:71 > +#define DYLD_IOS_VERSION_FIRST_WITH_LAZY_GESTURE_RECOGNIZER_INSTALLATION 0 > +#define DYLD_IOS_VERSION_FIRST_WITH_PROCESS_SWAP_ON_CROSS_SITE_NAVIGATION 0
These don't seem like dyldSPI
Tim Horton
Comment 4
2019-01-11 13:59:24 PST
Comment on
attachment 358940
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=358940&action=review
>> Source/WTF/wtf/spi/darwin/dyldSPI.h:71 >> +#define DYLD_IOS_VERSION_FIRST_WITH_PROCESS_SWAP_ON_CROSS_SITE_NAVIGATION 0 > > These don't seem like dyldSPI
True. I'll move them to an #else in VersionChecks.h
Tim Horton
Comment 5
2019-01-11 13:59:49 PST
And fix the macOS build
Tim Horton
Comment 6
2019-01-11 14:02:24 PST
Created
attachment 358943
[details]
Patch
Tim Horton
Comment 7
2019-01-11 14:11:21 PST
Created
attachment 358946
[details]
Patch
WebKit Commit Bot
Comment 8
2019-01-11 15:30:13 PST
Comment on
attachment 358946
[details]
Patch Clearing flags on attachment: 358946 Committed
r239880
: <
https://trac.webkit.org/changeset/239880
>
WebKit Commit Bot
Comment 9
2019-01-11 15:30:15 PST
All reviewed patches have been landed. Closing bug.
Garvan Keeley
Comment 10
2019-03-15 11:48:46 PDT
On Firefox iOS, installing the custom context menu is still broken when built with XCode 10.2 beta 4.
Garvan Keeley
Comment 11
2019-03-15 11:54:42 PDT
Attempting to re-install the long press gesture recognizer after each URL change detected works in *some* cases:
https://github.com/mozilla-mobile/firefox-ios/commit/daf2a5a58e04fffc8f7b8a67e766d037ed5960bf
(It may not be clear from that diff, but that code runs on WKWebView URL change events) Basically, if you have anything prescriptive we should be doing it would help us greatly.
Tim Horton
Comment 12
2019-03-15 12:32:49 PDT
(In reply to Garvan Keeley from
comment #11
)
> Attempting to re-install the long press gesture recognizer after each URL > change detected works in *some* cases: >
https://github.com/mozilla-mobile/firefox-ios/commit/
> daf2a5a58e04fffc8f7b8a67e766d037ed5960bf > > (It may not be clear from that diff, but that code runs on WKWebView URL > change events) > > Basically, if you have anything prescriptive we should be doing it would > help us greatly.
I don't think there's a great solution to this problem. The existing solution already isn't great, because you're digging into WKWebView internals, which are not stable (as we saw in this bug). The two things you want to observe are 1) any time we swap processes, and any time the WKWebView is added to the view hierarchy. I can't prescribe a solution since it's almost certainly going to involve more dirty internals, and I can't condone that! But I'm sure you can come up with something that is workable :) I'd also recommend filing a radar requesting proper API for whatever you're trying to do, so we can get out of this business altogether. I'll give you one hint, though: the thing you want to run after is -[WKContentViewInteraction setupInteraction]. Maybe take a peek at the callers :)
Garvan Keeley
Comment 13
2019-03-15 13:58:03 PDT
Thanks for the tips! I'll poke around and see if I can come up with a more robust hack. Being that hacks is all I have, I filed a request for official support:
https://bugreport.apple.com/web/?problemID=48936921
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug